--- a/.gitignore
+++ b/.gitignore
@@ -145,8 +145,9 @@ dmypy.json
 
 .mypy_cache
 
-# папки со статикой и медиа
-static/
-yatube/posts/static/
-yatube/media/
-
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+media/
